styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
body{
    background-color: #131316;
    color:#ffffff;
    font-family: 'Poppins', sans-serif;
    padding: 0;
    margin: 0;
}


section{
    display: grid;
    place-items: center;
    align-content: center;
    min-height: 100vh;
} 

.hero{
    opacity: 0;
    transition: all 1s;
    filter:blur(5px);
    transform: translateX(-100%);
    transition: all 1s;
} 

.show{
    opacity: 1; 
    filter: blur(0);
    transform: translateX(0);
}


 
.contacts{
    display: flex;
}


.contacts:nth-child(2) {
    transition-delay: 200ms;
}

.contacts:nth-child(3){
    transition-delay: 400ms;
}


.contacts:nth-child(4){
    transition-delay: 600ms;
}

.contacts:nth-child(5){
    transition-delay: 800ms;
}

.button{
     color: #2196f3;
    padding: 10px 20px;
    border: none;
    transition: background 0.3s ease,
    transform 0.3s ease;
    background-color: white;
}


button:hover{
    color: white;
    background: #1769aa;
    transform: scale(1.1);

}

